hphp/hack/test/typecheck/is_expression/invalid_hint_noreturn.php.exp
File "invalid_hint_noreturn.php", line 5, characters 5-15:
  err
File "invalid_hint_noreturn.php", line 4, characters 13-20:
The noreturn typehint can only be used to describe a function return type (Naming[2063])
