hphp/hack/test/typecheck/is_expression/invalid_hint_noreturn.php
<?hh // strict

function foo(mixed $x): void {
  if ($x is noreturn) {
    hh_show($x);
  }
}
